# atom2seq

./: .gitignore  README.md  glycine.py  nebulin_backbone.py  pyproject.toml  titin_backbone.py
.github/: CODEOWNERS
docs/: api.rst  conf.py  index.rst
src/atom2seq/: backbone_identifer.py  backbone_identifier.py  bean_parser.py  bond_detector.py  classes.py  detect_primary_structure.py  parser.py  parsers.py  pdb_parser.py  side_chain_identifier.py  verifier.py  xyz_parser.py
src/atom2seq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backbone_identifier.py  test_basic.py  test_bean_parser.py  test_bond_detector.py  test_classes.py  test_detect_primary_structure.py  test_parser.py  test_parsers.py  test_side_chain_identifier.py  test_verifier.py  test_xyz_parser.py
tests/assets/: 1ARK.cif  README.md  gay.xyz  water.bean  water.xyz  water_extra_info.cif  water_extra_lines.xyz  water_no_lines.xyz  water_no_number_of_atoms.xyz
tests/assets/backbone_identifier_tests/: gay.xyz
tests/assets/dimers/: dialanine.bean  diarginine.bean  diaspartate.bean  diglutamine.bean  diglycine.bean  dihistidine.bean  diisoleucine.bean  dileucine.bean  dimethionine.bean  diserine.bean  dithreonine.bean  ditryptophan.bean  dityrosine.bean
tests/assets/format_fixer/: bean_to_xyz.py  gjf_to_xyz.py  sudo_gjf_to_xyz.txt
tests/assets/monomers/: alanine.bean  alanine.xyz  arginine.xyz  asparagine.bean  asparagine.xyz  aspartate.xyz  cysteine.xyz  glutamate.bean  glutamate.xyz  glycine.bean  glycine.xyz  histidine.xyz  isoleucine.bean  isoleucine.xyz  (+17 more)
(+156 files in other folders)
